--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,17 +1,29 @@
 .menu {
     border: black 1px solid;
     border-radius: 10px;
-    padding: 10px;
     width: 500px;
-    margin: auto;
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    : 10px;
+    background: rgba(255, 255, 255, 255);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
 }
 
 .menu > * {
     padding: 5px;
     margin: 5px;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: rgba(241, 241, 241, 0.87)
 }
