--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,16 +1,5 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-
-  color-scheme: light dark;
-  color: #242424;
-  background-color: rgba(192, 192, 192, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+body, html {
+    height: 100%;
 }
-
 
 
